# ld-shared

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  run
data/shaders/: animation.glsl.f  animation.glsl.v  basic.glsl.f  basic.glsl.v
data/textures/: add.xcf  lightning.xcf  messages.xcf  planet.xcf  test_animation.xcf
include/: glfw_utils.hpp
include/filesystem/: Path.hpp
include/game/: ConnectFour.hpp
include/glfwutils/: glfw_utils.hpp
include/graphics/: BufferObjects.hpp  GraphicsObject.hpp  GraphicsSystem.hpp  ShaderProgram.hpp  Sprite.hpp  Texture.hpp
include/stbimage/: stb_image.h
include/utils/: NonCopyable.hpp
src/: glfw_utils.cpp  main.cpp  stb_image.c
src/filesystem/: Path.cpp
src/game/: ConnectFour.cpp
src/glfwutils/: glfw_utils.cpp
src/graphics/: BufferObjects.cpp  GraphicsObject.cpp  GraphicsSystem.cpp  ShaderProgram.cpp  Sprite.cpp  Texture.cpp
